

Version 1.3 : 1999.03.24
    Fixed  a  major bug in the decompression functions that caused complete
failure with some DMS files, mostly generated by old versions of DMS.  Made
some  other minor changes.  Changed the Makefile to strip debug information
from the executable. (Roche)


Version 1.3.1 : 2004.09.02
    Moved to C99 type definitions (#include <stdint.h>). Replaced tmpnam()
    with mkstemp(). Fixed print formatters. Fixed ambiguous C language
    constructs. Added a simple configure script for consistent compilation
    and installation. (Heikki Orsila <heikki.orsila@iki.fi>)

No Version : 2004-09-10
    Fixed file permissions for documentation directory.
    (Heikki Orsila <heikki.orsila@iki.fi>)

Version 1.3.2 : 2006-06-25
    Added -f option to override errors in unpacked data. It can be useful for
    desperate data salvation. Please send me corrupted dms images for
    further analysis to improve xdms. (Heikki Orsila <heikki.orsila@iki.fi>)

No version : 2006-06-25
    Added a broken support for operating systems without mkstemp() (bad, bad!).
    To compile on such a system, read xdms.txt. After ./configure you must
    edit src/xdmsconfig.h and then you can issue 'make'.
    (Heikki Orsila <heikki.orsila@iki.fi>)

No version : 2006-08-16
    Automatic detection for MINGW to avoid mkstemp(). Use mkstemps() instead.
    (Heikki Orsila <heikki.orsila@iki.fi>)

No version : 2006-08-17
    Cleaned up configure script and makefiles. -O2 compiler flag can now
    be replaced with $CFLAGS environment variable. Earlier $CFLAGS were
    just appended after -O2. $LDFLAGS and $CC are the other recognizable
    environment variables for configure. The makefiles do not recognize
    environment variables. All compile options must be given for the
    configure script.

    Fixed MinGW platform detection and src/Makefile.in. Link flags in
    the compile rule must be after object files. Thanks to Genju and Poohbear.
    (Heikki Orsila <heikki.orsila@iki.fi>)