@@ -1,13 +1,18 @@
-.TH XDMS 1 "December 11, 2005"
+.TH XDMS 1 "2006-08-17"
 .SH NAME
 xdms \- decompressing Amiga DMS files
 .SH SYNOPSIS
 .B xdms
+[-d destdir] [-p passwd] [-q] [-v] dmsfile [outputfile]
+.TP
+.B xdms
 [-d destdir] [-p passwd] [-q] [-v] <command> dmsfile [outputfile]
-.br
+.TP
 Commands:
 .TP
 .B xdms u
+or
+.B xdms
 Unpack file
 .TP
 .B xdms b
@@ -32,13 +37,8 @@ Extract files inside DMS archives using readdisk
 Unpack to disk image and compress with gzip
 .br
 .SH DESCRIPTION
-This manual page documents briefly the
-.B xdms
-command.
-.PP
-\fBxdms\fP is a tool for decompressing Amiga DMS files. DMS files contain disk
-images that are these days mainly useful for Amiga emulation. It can unpack
-DMS images to ADF images.
+\fBxdms\fP is a tool for decompressing Amiga DMS files to Amiga Disk Files
+(ADF images). DMS files are often used with Amiga emulators.
 .SH OPTIONS
 .TP
 .B \-d destdir
@@ -55,12 +55,16 @@ Be quiet.
 .TP
 .B \-v
 Be verbose.
-.SH Examples
+.SH EXAMPLES
 To unpack a DMS file, do:
 .TP
-xdms u foo.dms
+.B xdms foo.dms
+.TP
+which is also equivalent to:
+.TP
+.B xdms u foo.dms
 .SH BUGS
-Maybe.
+Yes.
 .br
 .SH SEE ALSO
 .BR amigadepacker (1),
@@ -76,5 +80,5 @@ xdms was written by Andre' Rodrigues de la Rocha, but now hosted
 and maintained by Heikki Orsila <heikki.orsila@iki.fi>.
 .PP
 This manual page was written by
-G\[:u]rkan Seng\[:u]n <gurkan@linuks.mine.nu>, for the Debian project, and
-Heikki Orsila <heikki.orsila@iki.fi>.
+G\[:u]rkan Seng\[:u]n <gurkan@linuks.mine.nu> for the Debian project and
+later modified by Heikki Orsila <heikki.orsila@iki.fi>.
